--- a/TVandMovieProject.ipynb
+++ b/TVandMovieProject.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28081622",
+   "id": "4012cc92",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,54 +22,98 @@
     "root = tk.Tk() \n",
     "root.title('Project Window Demo')\n",
     "## Gives the window the size\n",
-    "root.geometry('600x450+50+50')\n",
+    "root.geometry('600x500+50+50')\n",
+    "frame1 = Frame(root)\n",
+    "frame2 = Frame(root)\n",
     "## displays the hello world message\n",
-    "message =tk.Label(root,text=\"Hello World\",bg=\"green\",fg=\"white\")\n",
+    "message =tk.Label(root,text=\"Please select TV or Movie, Streaming Service, and Genre, when done press 'Get Options'\",bg=\"green\",fg=\"white\")\n",
     "message.pack(fill=tk.X) \n",
     "selected= tk.StringVar()\n",
     "Wtype=tk.StringVar()\n",
     "Watchtype=tk.StringVar()\n",
-    "\n",
-    "radioNetflix=ttk.Radiobutton(root,text=\"Netflix\",value=8, variable=Watchtype)\n",
-    "radioHulu=ttk.Radiobutton(root,text=\"Hulu\",value=15, variable=Watchtype)\n",
-    "radioPrime=ttk.Radiobutton(root,text=\"Prime\",value=9, variable=Watchtype)\n",
+    "radioNetflix=ttk.Radiobutton(frame1,text=\"Netflix\",value=8, variable=Watchtype)\n",
+    "radioHulu=ttk.Radiobutton(frame1,text=\"Hulu\",value=15, variable=Watchtype)\n",
+    "radioPrime=ttk.Radiobutton(frame1,text=\"Prime\",value=9, variable=Watchtype)\n",
+    "labelStream=tk.Label(frame1,text=\"Select a Streaming Service\")\n",
+    "labelStream.pack()\n",
     "radioNetflix.pack(side=tk.RIGHT)\n",
     "radioHulu.pack(side=tk.RIGHT)\n",
     "radioPrime.pack(side=tk.RIGHT)\n",
-    "radiotv=ttk.Radiobutton(root,text=\"TV\",value=2, variable=Wtype)\n",
-    "radioMovie=ttk.Radiobutton(root,text=\"Movie\",value=1, variable=Wtype)\n",
+    "labelType=tk.Label(frame2,text=\"Select TV or Movies\")\n",
+    "radiotv=ttk.Radiobutton(frame2,text=\"TV\",value=2, variable=Wtype)\n",
+    "radioMovie=ttk.Radiobutton(frame2,text=\"Movie\",value=1, variable=Wtype)\n",
+    "labelType.pack()\n",
     "radiotv.pack(side=tk.LEFT)\n",
-    "radioMovie.pack(side=tk.LEFT)\n",
-    "r1 = ttk.Radiobutton(root, text='Action', value=28, variable=selected)\n",
-    "r2 = ttk.Radiobutton(root, text='Sifi', value=878, variable=selected)\n",
-    "r3 = ttk.Radiobutton(root, text='Drama', value=18, variable=selected)\n",
+    "radioMovie.pack(side=tk.RIGHT)\n",
     "listbox=Listbox(root,height=15,width=30)\n",
-    "listbox.insert(END,\"Select TV or Movie and Genre\")\n",
+    "frame1.pack()\n",
+    "frame2.pack()\n",
     "##I use lists to keep the values of ratings and summarys and we use the index to match \n",
     "#the right tv show title to the ratings and summary. \n",
+    "var=StringVar()\n",
     "myRating=[]\n",
     "mySummary=[]\n",
+    "movieValues=[28,878,18,35,10751,99,80,9648]\n",
+    "tvValues=[10759,10765,18,35,10751,99,80,9648]\n",
+    "options=[\"Action\",\"Si-Fi\",\"Drama\",\"Comedy\",\"Family\",\"Documentary\",\"Crime\",\"Mystery\"]\n",
+    "tvQuery=10759\n",
+    "movieQuery=28\n",
+    "streamer=\"\"\n",
+    "sumRan=False\n",
+    "def streamService():\n",
+    "    global streamer\n",
+    "    global color\n",
+    "    if Watchtype.get()==\"9\":\n",
+    "        streamer=\"Prime\"\n",
+    "        color=\"#00A8E1\"\n",
+    "    elif Watchtype.get()==\"8\":\n",
+    "        streamer=\"Netflix\"\n",
+    "        color=\"Red\"\n",
+    "    elif Watchtype.get()==\"15\":\n",
+    "        streamer=\"Hulu\"\n",
+    "        color=\"Green\"\n",
+    "        \n",
+    "def setGenres(var):\n",
+    "    iVar = 0 \n",
+    "    print(var)\n",
+    "    for elem in options:\n",
+    "        iVar+=1\n",
+    "        if elem==var:\n",
+    "            movieQuery=movieValues[iVar-1]\n",
+    "            tvQuery=tvValues[iVar-1]\n",
+    "            \n",
+    "var.set(options[0])        \n",
+    "drop= OptionMenu(root,var,*options,command=setGenres).pack()\n",
     "def selectedsum():\n",
     "    for item in listbox.curselection():\n",
     "        messagebox.showinfo(\"Summary\" , mySummary[item])\n",
     "        \n",
     "def selectedcurs():\n",
     "    for item in listbox.curselection():\n",
-    "        messagebox.showinfo(\"Rating\",str(myRating[item]))       \n",
+    "        messagebox.showinfo(\"Rating\",str(myRating[item])) \n",
     "def selectedget():\n",
-    "    if selected.get()==\"\" or Wtype.get()==\"\" or Watchtype.get()==\"\":\n",
+    "    global sumRan\n",
+    "    if Watchtype.get()==\"\" or Wtype.get()==\"\":\n",
     "        ##If the radio buttons were not selected the user will recieve an error message\n",
+    "        message.config(text=\"Query missing parameters\", bg=\"red\")\n",
     "        messagebox.showerror(\"Error\", \"Choose TV or Movie AND Select Genre AND Where to Watch\")\n",
+    "        \n",
     "    else:\n",
+    "        if sumRan==False:\n",
+    "            label4=tk.Label(root,text=\"You can select a title and press 'Get Summary' or 'Get Rating' for more info\")\n",
+    "            label4.pack()\n",
+    "        sumRan=True\n",
     "        pattern=\"[a-zA-Z0-9]\"\n",
     "        if len(myRating)>1:\n",
     "            myRating.clear()\n",
     "            mySummary.clear()\n",
-    "        listbox.delete(0,END)\n",
+    "        listbox.delete(0,END)   \n",
     "        i = 1\n",
     "        if Wtype.get()==\"1\":\n",
+    "            streamService()\n",
+    "            message.config(text=f\"Your Query:{var.get()} Movies on {streamer}?\",bg=f\"{color}\")\n",
     "            while i<20:\n",
-    "                json_file=requests.get(f\"http://api.themoviedb.org/3/discover/movie?api_key=2b0268899e7722c303709443c41c21f4&sort_by=popularity.desc&include_adult=true&with_genres={selected.get()}&with_watch_providers={Watchtype.get()}&watch_region=US&page={i}\").json()\n",
+    "                json_file=requests.get(f\"http://api.themoviedb.org/3/discover/movie?api_key=2b0268899e7722c303709443c41c21f4&sort_by=popularity.desc&include_adult=true&with_genres={movieQuery}&with_watch_providers={Watchtype.get()}&watch_region=US&page={i}\").json()\n",
     "                i+=1\n",
     "                for elem in json_file['results']:\n",
     "                    title = elem.get('title')\n",
@@ -84,17 +128,10 @@
     "    ##Since the movie genre id and tv genre ids are differnt i reassigned the \n",
     "    ##values for the search to work\n",
     "        elif Wtype.get()==\"2\":\n",
-    "            genreVar=0 \n",
-    "            if selected.get()==\"28\":\n",
-    "                genreVar=10759\n",
-    "                print(genreVar)\n",
-    "            elif selected.get()==\"878\":\n",
-    "                genreVar=10765\n",
-    "            elif selected.get()==\"18\":\n",
-    "                genreVar=18\n",
-    "        \n",
+    "            streamService()\n",
+    "            message.config(text=f\"Your Query:{var.get()} TV Shows on {streamer}?\",bg=f\"{color}\")\n",
     "            while i<20:\n",
-    "                json_file=requests.get(f\"http://api.themoviedb.org/3/discover/tv?api_key=2b0268899e7722c303709443c41c21f4&with_original_language=en&language=en-US&region=US&sort_by=popularity.desc&include_adult=false&include_video=false&with_genres={genreVar}&with_watch_providers={Watchtype.get()}&watch_region=US&page={i}\").json()\n",
+    "                json_file=requests.get(f\"http://api.themoviedb.org/3/discover/tv?api_key=2b0268899e7722c303709443c41c21f4&with_original_language=en&language=en-US&region=US&sort_by=popularity.desc&include_adult=false&include_video=false&with_genres={tvQuery}&with_watch_providers={Watchtype.get()}&watch_region=US&page={i}\").json()\n",
     "                i+=1\n",
     "                for elem in json_file['results']:\n",
     "                    title = elem.get('original_name')\n",
@@ -108,41 +145,28 @@
     "                        listbox.insert(END,title)\n",
     "        button3.pack() \n",
     "        button4.pack()\n",
-    "        \n",
-    "button2=ttk.Button(root,text=\"Get Option\",command=selectedget)\n",
+    "listbox.pack()        \n",
+    "button2=ttk.Button(root,text=\"Get Option\",command=selectedget).pack()\n",
     "button3=ttk.Button(root,text=\"Get Rating\",command=selectedcurs)\n",
-    "button4=ttk.Button(root,text=\"Get Summary\",command=selectedsum)\n",
-    "r1.pack()\n",
-    "r2.pack()\n",
-    "r3.pack()   \n",
-    "listbox.pack()\n",
-    "button2.pack()\n",
-    "root.mainloop()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "74d94a53",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'int'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "i = 2\n",
-    "print(type(i))"
+    "button4=ttk.Button(root,text=\"Get Summary\",command=selectedsum)   \n",
+    "\n",
+    "root.mainloop()\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "218416b3",
+   "id": "c9b681ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ca6473e1",
    "metadata": {},
    "outputs": [],
    "source": []
