--- a/TVandMovieProject.ipynb
+++ b/TVandMovieProject.ipynb
@@ -5,7 +5,23 @@
    "execution_count": null,
    "id": "4012cc92",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-11-30 20:20:48.271 python[21871:9103203] Warning: Expected min height of view: (<NSButton: 0x7f891e9fee10>) to be less than or equal to 30 but got a height of 32.000000. This error will be logged once per view in violation.\n",
+      "2022-11-30 20:20:50.785 python[21871:9103203] Warning: Expected min height of view: (<NSButton: 0x7f894f01c870>) to be less than or equal to 30 but got a height of 32.000000. This error will be logged once per view in violation.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Si-Fi\n"
+     ]
+    }
+   ],
    "source": [
     "import tkinter as tk\n",
     "import re\n",
@@ -22,7 +38,7 @@
     "root = tk.Tk() \n",
     "root.title('Project Window Demo')\n",
     "## Gives the window the size\n",
-    "root.geometry('600x500+50+50')\n",
+    "root.geometry('600x600+60+60')\n",
     "frame1 = Frame(root)\n",
     "frame2 = Frame(root)\n",
     "## displays the hello world message\n",
@@ -31,6 +47,20 @@
     "selected= tk.StringVar()\n",
     "Wtype=tk.StringVar()\n",
     "Watchtype=tk.StringVar()\n",
+    "myfamily = {\n",
+    "    \"8\" : {\n",
+    "    \"hex\" : \"#E50914\",\n",
+    "    \"name\" : \"Netflix\"\n",
+    "  },\n",
+    "  \"9\" : {\n",
+    "    \"hex\" : \"#00A8E1\",\n",
+    "    \"name\" : \"Prime\"\n",
+    "  },\n",
+    "  \"15\" : {\n",
+    "    \"hex\" : \"#66aa33\",\n",
+    "    \"name\" : \"Hulu\"\n",
+    "  }\n",
+    "}\n",
     "radioNetflix=ttk.Radiobutton(frame1,text=\"Netflix\",value=8, variable=Watchtype)\n",
     "radioHulu=ttk.Radiobutton(frame1,text=\"Hulu\",value=15, variable=Watchtype)\n",
     "radioPrime=ttk.Radiobutton(frame1,text=\"Prime\",value=9, variable=Watchtype)\n",
@@ -56,32 +86,94 @@
     "movieValues=[28,878,18,35,10751,99,80,9648]\n",
     "tvValues=[10759,10765,18,35,10751,99,80,9648]\n",
     "options=[\"Action\",\"Si-Fi\",\"Drama\",\"Comedy\",\"Family\",\"Documentary\",\"Crime\",\"Mystery\"]\n",
+    "globValue={}\n",
+    "#     \"Action\":{\n",
+    "#         \"tv\":28,\n",
+    "#         \"movie\":10759\n",
+    "#     },\n",
+    "#     \"Si-Fi\":{\n",
+    "#         \"tv\":878,\n",
+    "#         \"movie\":10765\n",
+    "#     },\n",
+    "#     \"Drama\":{\n",
+    "#         \"tv\":18,\n",
+    "#         \"movie\":18\n",
+    "#     },\n",
+    "#     \"Comedy\"\n",
+    "# }\n",
+    "\n",
     "tvQuery=10759\n",
     "movieQuery=28\n",
     "streamer=\"\"\n",
     "sumRan=False\n",
+    "titles=[]\n",
+    "info=[]\n",
+    "tempRating=[]\n",
+    "tempRating==myRating\n",
+    "tempSummary=[]\n",
+    "def checkEntry(action):\n",
+    "    index=0\n",
+    "    inter = action.widget.get()\n",
+    "    if inter==\"\":\n",
+    "        info=titles\n",
+    "        myRating=tempRating \n",
+    "    else:\n",
+    "        info=[]\n",
+    "        for elem in titles:\n",
+    "            myRating=tempRating\n",
+    "            if inter.lower() in elem.lower():\n",
+    "                \n",
+    "                info.append(elem)\n",
+    "                index=titles.index(elem)\n",
+    "                \n",
+    "               \n",
+    "                \n",
+    "    refresh(info)\n",
+    "def refresh(info):\n",
+    "    listbox.delete(0, 'end')\n",
+    "# put new data\n",
+    "    for item in info:\n",
+    "        listbox.insert('end', item)\n",
+    "def getallinfo(json_file):\n",
+    "    pattern=\"[a-zA-Z0-9]\"\n",
+    "    for elem in json_file['results']:\n",
+    "        if Wtype.get()==\"1\":\n",
+    "            title = elem.get('title')\n",
+    "            titles.append(title)\n",
+    "        else:\n",
+    "            title= elem.get('original_name')\n",
+    "            titles.append(title)\n",
+    "        idnum=elem.get('id')\n",
+    "        voteavg = elem.get('vote_average')\n",
+    "        myRating.append(voteavg)\n",
+    "        votenum = elem.get('vote_count')\n",
+    "        summary =elem.get('overview')\n",
+    "        mySummary.append(summary)\n",
+    "        listbox.insert(END,title)\n",
     "def streamService():\n",
     "    global streamer\n",
     "    global color\n",
-    "    if Watchtype.get()==\"9\":\n",
-    "        streamer=\"Prime\"\n",
-    "        color=\"#00A8E1\"\n",
-    "    elif Watchtype.get()==\"8\":\n",
-    "        streamer=\"Netflix\"\n",
-    "        color=\"Red\"\n",
-    "    elif Watchtype.get()==\"15\":\n",
-    "        streamer=\"Hulu\"\n",
-    "        color=\"Green\"\n",
-    "        \n",
+    "    color=myfamily[Watchtype.get()].get(\"hex\")\n",
+    "    streamer=myfamily[Watchtype.get()].get(\"name\")\n",
+    "#     if Watchtype.get()==\"9\":\n",
+    "#         streamer=\"Prime\"\n",
+    "#         color=\"#00A8E1\"\n",
+    "#     elif Watchtype.get()==\"8\":\n",
+    "#         streamer=\"Netflix\"\n",
+    "#         color=\"#E50914\"\n",
+    "#     elif Watchtype.get()==\"15\":\n",
+    "#         streamer=\"Hulu\"\n",
+    "#         color=\"#66aa33\"        \n",
     "def setGenres(var):\n",
+    "    global movieQuery\n",
+    "    global tvQuery\n",
     "    iVar = 0 \n",
     "    print(var)\n",
     "    for elem in options:\n",
     "        iVar+=1\n",
     "        if elem==var:\n",
     "            movieQuery=movieValues[iVar-1]\n",
-    "            tvQuery=tvValues[iVar-1]\n",
-    "            \n",
+    "            tvQuery=tvValues[iVar-1]            \n",
     "var.set(options[0])        \n",
     "drop= OptionMenu(root,var,*options,command=setGenres).pack()\n",
     "def selectedsum():\n",
@@ -89,14 +181,17 @@
     "        messagebox.showinfo(\"Summary\" , mySummary[item])\n",
     "        \n",
     "def selectedcurs():\n",
+    "    print(titles[0])\n",
+    "    print(myRating[0])\n",
     "    for item in listbox.curselection():\n",
     "        messagebox.showinfo(\"Rating\",str(myRating[item])) \n",
+    "        \n",
     "def selectedget():\n",
     "    global sumRan\n",
     "    if Watchtype.get()==\"\" or Wtype.get()==\"\":\n",
     "        ##If the radio buttons were not selected the user will recieve an error message\n",
     "        message.config(text=\"Query missing parameters\", bg=\"red\")\n",
-    "        messagebox.showerror(\"Error\", \"Choose TV or Movie AND Select Genre AND Where to Watch\")\n",
+    "        messagebox.showerror(\"Error\", \"TV or Movie AND Genre AND Where to Watch\")\n",
     "        \n",
     "    else:\n",
     "        if sumRan==False:\n",
@@ -107,45 +202,31 @@
     "        if len(myRating)>1:\n",
     "            myRating.clear()\n",
     "            mySummary.clear()\n",
+    "            titles.clear()\n",
     "        listbox.delete(0,END)   \n",
     "        i = 1\n",
     "        if Wtype.get()==\"1\":\n",
     "            streamService()\n",
-    "            message.config(text=f\"Your Query:{var.get()} Movies on {streamer}?\",bg=f\"{color}\")\n",
+    "            message.config(text=f\"Your Query: {var.get()} Movies on {streamer}?\",bg=f\"{color}\")\n",
     "            while i<20:\n",
     "                json_file=requests.get(f\"http://api.themoviedb.org/3/discover/movie?api_key=2b0268899e7722c303709443c41c21f4&sort_by=popularity.desc&include_adult=true&with_genres={movieQuery}&with_watch_providers={Watchtype.get()}&watch_region=US&page={i}\").json()\n",
     "                i+=1\n",
-    "                for elem in json_file['results']:\n",
-    "                    title = elem.get('title')\n",
-    "                    if(re.search(pattern,title)):\n",
-    "                        voteavg = elem.get('vote_average')\n",
-    "                        myRating.append(voteavg)\n",
-    "                        votenum = elem.get('vote_count')\n",
-    "                        summary =elem.get('overview')\n",
-    "                        mySummary.append(summary)\n",
-    "                        listbox.insert(END,title)\n",
-    "                    \n",
+    "                getallinfo(json_file)                                 \n",
     "    ##Since the movie genre id and tv genre ids are differnt i reassigned the \n",
     "    ##values for the search to work\n",
     "        elif Wtype.get()==\"2\":\n",
     "            streamService()\n",
-    "            message.config(text=f\"Your Query:{var.get()} TV Shows on {streamer}?\",bg=f\"{color}\")\n",
+    "            message.config(text=f\"Your Query: {var.get()} TV Shows on {streamer}?\",bg=f\"{color}\")\n",
     "            while i<20:\n",
     "                json_file=requests.get(f\"http://api.themoviedb.org/3/discover/tv?api_key=2b0268899e7722c303709443c41c21f4&with_original_language=en&language=en-US&region=US&sort_by=popularity.desc&include_adult=false&include_video=false&with_genres={tvQuery}&with_watch_providers={Watchtype.get()}&watch_region=US&page={i}\").json()\n",
     "                i+=1\n",
-    "                for elem in json_file['results']:\n",
-    "                    title = elem.get('original_name')\n",
-    "                    if(re.search(pattern,title)):\n",
-    "                        idnum=elem.get('id')\n",
-    "                        voteavg = elem.get('vote_average')\n",
-    "                        myRating.append(voteavg)\n",
-    "                        votenum = elem.get('vote_count')\n",
-    "                        summary =elem.get('overview')\n",
-    "                        mySummary.append(summary)\n",
-    "                        listbox.insert(END,title)\n",
+    "                getallinfo(json_file)\n",
     "        button3.pack() \n",
     "        button4.pack()\n",
-    "listbox.pack()        \n",
+    "entry = Entry(root)\n",
+    "entry.pack()\n",
+    "entry.bind('<KeyRelease>', checkEntry)\n",
+    "listbox.pack()\n",
     "button2=ttk.Button(root,text=\"Get Option\",command=selectedget).pack()\n",
     "button3=ttk.Button(root,text=\"Get Rating\",command=selectedcurs)\n",
     "button4=ttk.Button(root,text=\"Get Summary\",command=selectedsum)   \n",
@@ -161,12 +242,137 @@
    "id": "c9b681ee",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from tkinter import *\n",
+    "\n",
+    "\n",
+    "def Scankey(event):\n",
+    "\n",
+    "\tval = event.widget.get()\n",
+    "\tprint(val)\n",
+    "\t\n",
+    "\n",
+    "\tif val == '':\n",
+    "\t\tdata = list\n",
+    "\telse:\n",
+    "\t\tdata = []\n",
+    "\t\tfor item in list:\n",
+    "\t\t\tif val.lower() in item.lower():\n",
+    "\t\t\t\tdata.append(item)\t\t\t\t\n",
+    "\n",
+    "\t\n",
+    "\tUpdate(data)\n",
+    "\n",
+    "\n",
+    "def Update(data):\n",
+    "\t\n",
+    "\n",
+    "\tlistbox.delete(0, 'end')\n",
+    "\n",
+    "\t# put new data\n",
+    "\tfor item in data:\n",
+    "\t\tlistbox.insert('end', item)\n",
+    "\n",
+    "\n",
+    "\n",
+    "list = ('C','C++','Java',\n",
+    "\t'Python','Perl',\n",
+    "\t'PHP','ASP','JS' )\n",
+    "\n",
+    "ws = Tk()\n",
+    "\n",
+    "\n",
+    "entry = Entry(ws)\n",
+    "entry.pack()\n",
+    "entry.bind('<KeyRelease>', Scankey)\n",
+    "\n",
+    "\n",
+    "listbox = Listbox(ws)\n",
+    "listbox.pack()\n",
+    "Update(list)\n",
+    "ws.mainloop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bb48fb73",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "#00A8E1\n",
+      "Prime\n",
+      "#00A8E1\n"
+     ]
+    }
+   ],
+   "source": [
+    "Watchtype=\"9\"\n",
+    "myfamily = {\n",
+    "  \"8\" : {\n",
+    "    \"hex\" : \"#E50914\",\n",
+    "    \"name\" : \"Netflix\"\n",
+    "  },\n",
+    "  \"9\" : {\n",
+    "    \"hex\" : \"#00A8E1\",\n",
+    "    \"name\" : \"Prime\"\n",
+    "  },\n",
+    "  \"15\" : {\n",
+    "    \"hex\" : \"66aa33\",\n",
+    "    \"name\" : \"hulu\"\n",
+    "  }\n",
+    "}\n",
+    "print(myfamily[Watchtype].get(\"hex\"))\n",
+    "if Watchtype==\"9\":\n",
+    "        streamer=\"Prime\"\n",
+    "        color=\"#00A8E1\"\n",
+    "elif Watchtype.get()==\"8\":\n",
+    "        streamer=\"Netflix\"\n",
+    "        color=\"#E50914\"\n",
+    "elif Watchtype.get()==\"15\":\n",
+    "        streamer=\"Hulu\"\n",
+    "        color=\"#66aa33\"\n",
+    "print(streamer)\n",
+    "print(color)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "758c0aee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Action': {'tv': 28, 'movie': 10759}, 'Si-Fi': {'tv': 878, 'movie': 10765}}\n"
+     ]
+    }
+   ],
+   "source": [
+    "globValue={\n",
+    "    \"Action\":{\n",
+    "        \"tv\":28,\n",
+    "        \"movie\":10759\n",
+    "    },\n",
+    "    \"Si-Fi\":{\n",
+    "        \"tv\":878,\n",
+    "        \"movie\":10765\n",
+    "    }\n",
+    "}\n",
+    "\n",
+    "\n",
+    "print(globValue)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ca6473e1",
+   "id": "f531352e",
    "metadata": {},
    "outputs": [],
    "source": []
