--- a/tv+movie_project.ipynb
+++ b/tv+movie_project.ipynb
@@ -1,6 +1,254 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d478691a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import tkinter as tk\n",
+    "import re\n",
+    "from tkinter import*\n",
+    "import requests\n",
+    "from tkinter import ttk\n",
+    "from tkinter.messagebox import showinfo\n",
+    "from PIL import Image, ImageTk\n",
+    "from tkinter import messagebox\n",
+    "import pandas as pd \n",
+    "import csv\n",
+    "import os\n",
+    "## Starts a window \n",
+    "root = tk.Tk() \n",
+    "root.title('Project Window Demo')\n",
+    "## Gives the window the size\n",
+    "root.geometry('600x600+60+60')\n",
+    "frame1 = Frame(root)\n",
+    "frame2 = Frame(root)\n",
+    "## displays the hello world message\n",
+    "message =tk.Label(root,text=\"Please select TV or Movie, Streaming Service, and Genre, when done press 'Get Options'\",bg=\"green\",fg=\"white\")\n",
+    "message.pack(fill=tk.X) \n",
+    "selected= tk.StringVar()\n",
+    "Wtype=tk.StringVar()\n",
+    "Watchtype=tk.StringVar()\n",
+    "myfamily = {\n",
+    "    \"8\" : {\n",
+    "    \"hex\" : \"#E50914\",\n",
+    "    \"name\" : \"Netflix\"\n",
+    "  },\n",
+    "  \"9\" : {\n",
+    "    \"hex\" : \"#00A8E1\",\n",
+    "    \"name\" : \"Prime\"\n",
+    "  },\n",
+    "  \"15\" : {\n",
+    "    \"hex\" : \"#66aa33\",\n",
+    "    \"name\" : \"Hulu\"\n",
+    "  }\n",
+    "}\n",
+    "radioNetflix=ttk.Radiobutton(frame1,text=\"Netflix\",value=8, variable=Watchtype)\n",
+    "radioHulu=ttk.Radiobutton(frame1,text=\"Hulu\",value=15, variable=Watchtype)\n",
+    "radioPrime=ttk.Radiobutton(frame1,text=\"Prime\",value=9, variable=Watchtype)\n",
+    "labelStream=tk.Label(frame1,text=\"Select a Streaming Service\")\n",
+    "labelStream.pack()\n",
+    "radioNetflix.pack(side=tk.RIGHT)\n",
+    "radioHulu.pack(side=tk.RIGHT)\n",
+    "radioPrime.pack(side=tk.RIGHT)\n",
+    "labelType=tk.Label(frame2,text=\"Select TV or Movies\")\n",
+    "radiotv=ttk.Radiobutton(frame2,text=\"TV\",value=2, variable=Wtype)\n",
+    "radioMovie=ttk.Radiobutton(frame2,text=\"Movie\",value=1, variable=Wtype)\n",
+    "labelType.pack()\n",
+    "radiotv.pack(side=tk.LEFT)\n",
+    "radioMovie.pack(side=tk.RIGHT)\n",
+    "listbox=Listbox(root,height=15,width=30)\n",
+    "frame1.pack()\n",
+    "frame2.pack()\n",
+    "##I use lists to keep the values of ratings and summarys and we use the index to match \n",
+    "#the right tv show title to the ratings and summary. \n",
+    "var=StringVar()\n",
+    "myRating=[]\n",
+    "mySummary=[]\n",
+    "movieValues=[28,878,18,35,10751,99,80,9648]\n",
+    "tvValues=[10759,10765,18,35,10751,99,80,9648]\n",
+    "options=[\"Action\",\"Si-Fi\",\"Drama\",\"Comedy\",\"Family\",\"Documentary\",\"Crime\",\"Mystery\"]\n",
+    "globValue={}\n",
+    "#     \"Action\":{\n",
+    "#         \"tv\":28,\n",
+    "#         \"movie\":10759\n",
+    "#     },\n",
+    "#     \"Si-Fi\":{\n",
+    "#         \"tv\":878,\n",
+    "#         \"movie\":10765\n",
+    "#     },\n",
+    "#     \"Drama\":{\n",
+    "#         \"tv\":18,\n",
+    "#         \"movie\":18\n",
+    "#     },\n",
+    "#     \"Comedy\"\n",
+    "# }\n",
+    "\n",
+    "tvQuery=10759\n",
+    "movieQuery=28\n",
+    "streamer=\"\"\n",
+    "sumRan=False\n",
+    "titles=[]\n",
+    "info=[]\n",
+    "tempRating=[]\n",
+    "tempRating==myRating\n",
+    "tempSummary=[]\n",
+    "def checkEntry(action):\n",
+    "    index=0\n",
+    "    inter = action.widget.get()\n",
+    "    if inter==\"\":\n",
+    "        info=titles\n",
+    "        myRating=tempRating \n",
+    "    else:\n",
+    "        info=[]\n",
+    "        for elem in titles:\n",
+    "            myRating=tempRating\n",
+    "            if inter.lower() in elem.lower():\n",
+    "                \n",
+    "                info.append(elem)\n",
+    "                index=titles.index(elem)\n",
+    "                \n",
+    "               \n",
+    "                \n",
+    "    refresh(info)\n",
+    "def refresh(info):\n",
+    "    listbox.delete(0, 'end')\n",
+    "# put new data\n",
+    "    for item in info:\n",
+    "        listbox.insert('end', item)\n",
+    "def getallinfo(json_file):\n",
+    "    pattern=\"[a-zA-Z0-9]\"\n",
+    "    for elem in json_file['results']:\n",
+    "        if Wtype.get()==\"1\":\n",
+    "            title = elem.get('title')\n",
+    "            titles.append(title)\n",
+    "        else:\n",
+    "            title= elem.get('original_name')\n",
+    "            titles.append(title)\n",
+    "        idnum=elem.get('id')\n",
+    "        voteavg = elem.get('vote_average')\n",
+    "        myRating.append(voteavg)\n",
+    "        votenum = elem.get('vote_count')\n",
+    "        summary =elem.get('overview')\n",
+    "        mySummary.append(summary)\n",
+    "        listbox.insert(END,title)\n",
+    "def streamService():\n",
+    "    global streamer\n",
+    "    global color\n",
+    "    color=myfamily[Watchtype.get()].get(\"hex\")\n",
+    "    streamer=myfamily[Watchtype.get()].get(\"name\")\n",
+    "#     if Watchtype.get()==\"9\":\n",
+    "#         streamer=\"Prime\"\n",
+    "#         color=\"#00A8E1\"\n",
+    "#     elif Watchtype.get()==\"8\":\n",
+    "#         streamer=\"Netflix\"\n",
+    "#         color=\"#E50914\"\n",
+    "#     elif Watchtype.get()==\"15\":\n",
+    "#         streamer=\"Hulu\"\n",
+    "#         color=\"#66aa33\"        \n",
+    "def setGenres(var):\n",
+    "    global movieQuery\n",
+    "    global tvQuery\n",
+    "    iVar = 0 \n",
+    "    print(var)\n",
+    "    for elem in options:\n",
+    "        iVar+=1\n",
+    "        if elem==var:\n",
+    "            movieQuery=movieValues[iVar-1]\n",
+    "            tvQuery=tvValues[iVar-1]            \n",
+    "var.set(options[0])        \n",
+    "drop= OptionMenu(root,var,*options,command=setGenres).pack()\n",
+    "def selectedsum():\n",
+    "    for item in listbox.curselection():\n",
+    "        messagebox.showinfo(\"Summary\" , mySummary[item])\n",
+    "        \n",
+    "def selectedcurs():\n",
+    "    print(titles[0])\n",
+    "    print(myRating[0])\n",
+    "    for item in listbox.curselection():\n",
+    "        messagebox.showinfo(\"Rating\",str(myRating[item])) \n",
+    "        \n",
+    "def selectedget():\n",
+    "    global sumRan\n",
+    "    if Watchtype.get()==\"\" or Wtype.get()==\"\":\n",
+    "        ##If the radio buttons were not selected the user will recieve an error message\n",
+    "        message.config(text=\"Query missing parameters\", bg=\"red\")\n",
+    "        messagebox.showerror(\"Error\", \"TV or Movie AND Genre AND Where to Watch\")\n",
+    "        \n",
+    "    else:\n",
+    "        if sumRan==False:\n",
+    "            label4=tk.Label(root,text=\"You can select a title and press 'Get Summary' or 'Get Rating' for more info\")\n",
+    "            label4.pack()\n",
+    "        sumRan=True\n",
+    "        pattern=\"[a-zA-Z0-9]\"\n",
+    "        if len(myRating)>1:\n",
+    "            myRating.clear()\n",
+    "            mySummary.clear()\n",
+    "            titles.clear()\n",
+    "        listbox.delete(0,END)   \n",
+    "        i = 1\n",
+    "        if Wtype.get()==\"1\":\n",
+    "            streamService()\n",
+    "            ##message.config(text=f\"Your Query: {var.get()} Movies on {streamer}?\",bg=f\"{color}\")\n",
+    "            while i<20:\n",
+    "                json_file=requests.get(f\"http://api.themoviedb.org/3/discover/movie?api_key=2b0268899e7722c303709443c41c21f4&sort_by=popularity.desc&include_adult=true&with_genres={movieQuery}&with_watch_providers={Watchtype.get()}&watch_region=US&page={i}\").json()\n",
+    "                i+=1\n",
+    "                getallinfo(json_file)                                 \n",
+    "    ##Since the movie genre id and tv genre ids are differnt i reassigned the \n",
+    "    ##values for the search to work\n",
+    "        elif Wtype.get()==\"2\":\n",
+    "            streamService()\n",
+    "            ##message.config(text=f\"Your Query: {var.get()} TV Shows on {streamer}?\",bg=f\"{color}\")\n",
+    "            while i<20:\n",
+    "                json_file=requests.get(f\"http://api.themoviedb.org/3/discover/tv?api_key=2b0268899e7722c303709443c41c21f4&with_original_language=en&language=en-US&region=US&sort_by=popularity.desc&include_adult=false&include_video=false&with_genres={tvQuery}&with_watch_providers={Watchtype.get()}&watch_region=US&page={i}\").json()\n",
+    "                i+=1\n",
+    "                getallinfo(json_file)\n",
+    "        button3.pack() \n",
+    "        button4.pack()\n",
+    "entry = Entry(root)\n",
+    "entry.pack()\n",
+    "entry.bind('<KeyRelease>', checkEntry)\n",
+    "listbox.pack()\n",
+    "button2=ttk.Button(root,text=\"Get Option\",command=selectedget).pack()\n",
+    "button3=ttk.Button(root,text=\"Get Rating\",command=selectedcurs)\n",
+    "button4=ttk.Button(root,text=\"Get Summary\",command=selectedsum)   \n",
+    "\n",
+    "root.mainloop()\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b7163bc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
