--- a/tv+movie_project.ipynb
+++ b/tv+movie_project.ipynb
@@ -3,9 +3,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b21050ce",
+   "id": "b06cc9e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Drama\n"
+     ]
+    }
+   ],
    "source": [
     "import tkinter as tk\n",
     "import re\n",
@@ -31,6 +39,7 @@
     "selected= tk.StringVar()\n",
     "Wtype=tk.StringVar()\n",
     "Watchtype=tk.StringVar()\n",
+    "Index = tk.IntVar()\n",
     "myfamily = {\n",
     "    \"8\" : {\n",
     "    \"hex\" : \"#E50914\",\n",
@@ -59,7 +68,9 @@
     "labelType.pack()\n",
     "radiotv.pack(side=tk.LEFT)\n",
     "radioMovie.pack(side=tk.RIGHT)\n",
+    "\n",
     "listbox=Listbox(root,height=15,width=30)\n",
+    "\n",
     "frame1.pack()\n",
     "frame2.pack()\n",
     "##I use lists to keep the values of ratings and summarys and we use the index to match \n",
@@ -95,29 +106,29 @@
     "tempRating=[]\n",
     "tempRating==myRating\n",
     "tempSummary=[]\n",
-    "def checkEntry(action):\n",
-    "    index=0\n",
-    "    inter = action.widget.get()\n",
-    "    if inter==\"\":\n",
-    "        info=titles\n",
-    "        myRating=tempRating \n",
-    "    else:\n",
-    "        info=[]\n",
-    "        for elem in titles:\n",
-    "            myRating=tempRating\n",
-    "            if inter.lower() in elem.lower():\n",
+    "# def checkEntry(action):\n",
+    "#     index=0\n",
+    "#     inter = action.widget.get()\n",
+    "#     if inter==\"\":\n",
+    "#         info=titles\n",
+    "#         myRating=tempRating \n",
+    "#     else:\n",
+    "#         info=[]\n",
+    "#         for elem in titles:\n",
+    "#             myRating=tempRating\n",
+    "#             if inter.lower() in elem.lower():\n",
     "                \n",
-    "                info.append(elem)\n",
-    "                index=titles.index(elem)\n",
+    "#                 info.append(elem)\n",
+    "#                 index=titles.index(elem)\n",
     "                \n",
     "               \n",
     "                \n",
-    "    refresh(info)\n",
-    "def refresh(info):\n",
-    "    listbox.delete(0, 'end')\n",
+    "#     refresh(info)\n",
+    "# def refresh(info):\n",
+    "#     listbox.delete(0, 'end')\n",
     "# put new data\n",
-    "    for item in info:\n",
-    "        listbox.insert('end', item)\n",
+    "#     for item in info:\n",
+    "#         listbox.insert('end', item)\n",
     "def getallinfo(json_file):\n",
     "    pattern=\"[a-zA-Z0-9]\"\n",
     "    for elem in json_file['results']:\n",
@@ -207,9 +218,9 @@
     "                getallinfo(json_file)\n",
     "        button3.pack() \n",
     "        button4.pack()\n",
-    "entry = Entry(root)\n",
-    "entry.pack()\n",
-    "entry.bind('<KeyRelease>', checkEntry)\n",
+    "# entry = Entry(root)\n",
+    "# entry.pack()\n",
+    "# entry.bind('<KeyRelease>', checkEntry)\n",
     "listbox.pack()\n",
     "button2=ttk.Button(root,text=\"Get Option\",command=selectedget).pack()\n",
     "button3=ttk.Button(root,text=\"Get Rating\",command=selectedcurs)\n",
@@ -224,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "86b4f358",
+   "id": "f3f4926c",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -232,7 +243,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e358a7e3",
+   "id": "6a28c650",
    "metadata": {},
    "outputs": [],
    "source": []
